# OpenGLRenderer

./: .gitignore  CMakeLists.txt  auto_build.ps1  build.bat  f1.cpp  h1.hpp  main.cpp  temp.cpp
include/: camera.h  camera.hpp  engine.hpp  h1.hpp  image.hpp  lights.h  lights.hpp  mesh.hpp  model_loader.hpp  models.h  models.hpp  scenes.h  scenes.hpp  shader.h  shader.hpp  shapes.h  shapes.hpp
include/assimp/: revision.h
include/glad/: glad.h
libs/: CMakeLists.txt  f1.cpp
shaders/: basic.frag  basic.vert  cubemap.frag  cubemap.vert  frame_buffer.frag  frame_buffer.vert  light.frag  light.vert  lines.frag  lines.vert  model.frag  model.vert  planes.frag  planes.vert  texture.frag  texture.vert
src/: camera.cpp  engine.cpp  glad.c  image.cpp  lights.cpp  main.cpp  mesh.cpp  model_loader.cpp  models.cpp  scenes.cpp  shader.cpp  shapes.cpp
